Fix bullet spacing across browsers

--- a/subs/board/css/main.css
+++ b/subs/board/css/main.css
@@ -5,8 +5,8 @@
     text-decoration: revert;
   }
 
-  ul {
-    list-style: inside;
+  li::before {
+    content: "• ";
   }
 
   h1,
